# AutomatedCourseGenerator

./: .env.example  .gitignore  PYTEST_GUIDE.md  README.md  SPRINT2_NOTES.md  SPRINT3_NOTES.md  alembic.ini  file.txt  notebook.ipynb  pyproject.toml  test.json
backend/: .env.example  NextSteps.md  agent.py  llm.py  pyproject.toml  test_endpoints.py
backend/docs/Architecture/: 07 System Context Diagram.md
backend/docs/Requirements/: 04 Functional Requirements.md  05 Non-Functional Requirements.md  06 User Stories.md
backend/docs/Vision & Bussiness/: 01 Project Charter.md  03 Product Requirements Document.md
backend/src/cogenai/agents/: __init__.py  base.py  config.py  context.py  registry.py
backend/src/cogenai/agents_implementations/: consistency_checker.py  content_block_generator.py  context_synthesizer.py  curriculum_planner.py  evaluator.py  orchestator.py  persona_adapter.py  prerequisite_validator.py  refiner.py  section_author.py
backend/src/cogenai/agents_implementations/refiners/: __init__.py  base.py  block_refiner.py  context_refiner.py  exceptions.py  issue_analyzer.py  metadata_refiner.py  module_refiner.py  plan_refiner.py  prerequisites_refiner.py  refinement_planner.py  scope_builder.py  section_refiner.py
backend/src/cogenai/application/: jobs.py  llm_run.py  metrics.py  run_demo.py  templates.py  webhooks.py
backend/src/cogenai/application/agents/: __init__.py  base.py  config.py  protocol.py
backend/src/cogenai/application/orchestrator/: consistency_checker.py  content_block_generator.py  context_synthesizer.py  curriculum_planner.py  evaluator.py  orchestator.py  persona_adapter.py  prerequisite_validator.py  refiner.py  section_author.py  top_orchestrator.py
backend/src/cogenai/application/templates/: python-beginner.json  rust-advanced.json
backend/src/cogenai/bootstrap/: __init__.py  app.py  container.py  jobs.py  logging.py  orchestrator.py  settings.py
backend/src/cogenai/domain/: __init__.py
backend/src/cogenai/domain/course/: __init__.py  entities.py  errors.py  events.py
backend/src/cogenai/domain/ports/: __init__.py  llm.py
backend/src/cogenai/domain/shared/: __init__.py  value_objects.py
backend/src/cogenai/domain/value_objects/: __init__.py  llm.py
backend/src/cogenai/infrastructure/: __init__.py  container.py
backend/src/cogenai/infrastructure/llm/: __init__.py  base.py  factory.py  gemini.py  openai.py  stub.py
backend/src/cogenai/prompt/: __init__.py  block_refiner.yml  consistency_checker.yml  content_block_generator.yml  context_refiner.yml  context_synthesizer.yml  curriculum_planner.yml  evaluator.yml  metadata_refiner.yml  module_refiner.yml  orchestrator.yml  persona_adapter.yml  plan_refiner.yml  prerequisite_validator.yml  prerequisites_refiner.yml  refiner.yml  section_author.yml  section_refiner.yml  top_orchestrator.yml
backend/src/cogenai/shared/: logging.py  settings.py
backend/tests/e2e/: test_cli_metadata_propagation.py
backend/tests/unit/: test_agent_assignment.py  test_agent_cancellation.py  test_all_prompts_have_schemas.py  test_app_routes.py  test_async_job_lifecycle.py  test_delete_job.py  test_generation_request_dto.py  test_job_event_bus.py  test_job_store.py  test_llm_orchestrator.py  test_metrics.py  test_orchestration_helpers.py  test_prompt_schema.py  test_request_id_middleware.py  test_sprint10.py  test_sprint10_jobs.py  test_sprint11.py  test_sprint12.py  test_sprint5.py  test_sprint6.py  test_sqlite_job_store.py  test_templates.py
backend/tests/unit/refinement/: _fixtures.py  test_budget.py  test_course_dto.py  test_dependency_graph.py  test_issue_analyzer.py  test_metadata_refiner.py  test_refinement_planner.py  test_refiner_orchestrator.py  test_refiners.py  test_scope_builder.py
migrations/: env.py
(+123 files in other folders)
