[project]
name = "course-automation"
version = "0.1.0"
description = "Auto-generate courses from mixed content sources and store knowledge in a graph database."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Course Automation Team" }
]

dependencies = [
    # Core / API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",

    # Database (Postgres for metadata)
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",

    # Graph database (Neo4j)
    "neo4j>=5.27.0",

    # AI (Gemini)
    "google-genai>=0.2.0",

    # Source ingestion
    "youtube-transcript-api>=0.6.2",
    "pypdf>=5.1.0",
    "trafilatura>=1.12.0",
    "httpx>=0.27.2",

    # Observability
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.2",
    "aiosqlite>=0.20.0",
    "testcontainers[postgres,neo4j]>=4.8.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --strict-markers"
markers = [
    "requires_docker: tests that spin up real Docker containers (e.g. testcontainers). Skip with -m 'not requires_docker'.",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
