[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cogenai"
version = "0.0.1"
description = "A tool for generating course from scratch"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Evan Flores", email = "e2002florespulido@gmail.com" },
]
keywords = [
    "course",
    "generation",
    "AI"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "pandas",
    "uvicorn",
    "scikit-learn",
    "openai",
    "fastapi",
    "google-genai",
    "google-auth",
    "anthropic",
    "pydantic",
    "pydantic-settings",
    "pyyaml",
]

[project.optional-dependencies]

dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cogenai"]
exclude = ["cogenai.egg-info*"]

[tool.setuptools.package-data]
cogenai = ["*.pyi", "py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
ignore_missing_imports = true
disable_error_code = [
    "no-any-return",
    "override",
    "type-arg",
    "misc",
    "unused-ignore",
    "attr-defined",
    "arg-type",
    "no-untyped-def",
    "dict-item",
    "import-untyped",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires real RabbitMQ/OTel collector",
    "slow: opt-in tests (subprocess, network); skip with -m 'not slow'",
]
asyncio_mode = "auto"
pythonpath = ["src"]
